Fixed css for ReST align directive

--- a/src/landslide/themes/tango/css/screen.css
+++ b/src/landslide/themes/tango/css/screen.css
@@ -168,11 +168,13 @@ section img.align-center {
 section img.align-right {
   display: block;
   margin-left: auto;
+  margin-right: 0;
 }
 
 section img.align-left {
   display: block;
   margin-right: auto;
+  margin-left: 0;
 }
 
 a {
